--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,47 @@
+app==0.0.1
+appdirs==1.4.4
+asgiref==3.3.4
+autopep8==1.5.7
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.6
+charset-normalizer==2.0.6
 click==7.1.2
+distlib==0.3.1
+Django==3.2
+et-xmlfile==1.1.0
+filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
-greenlet==1.1.2
 gunicorn==20.0.4
+idna==3.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+numpy==1.21.2
+openai==0.10.4
+openpyxl==3.0.9
+pandas==1.3.3
+pandas-stubs==1.2.0.17
+pipenv==2020.11.15
 psycopg2-binary==2.8.6
+pycodestyle==2.7.0
 pycparser==2.20
+python-dateutil==2.8.2
 python-dotenv==0.15.0
-six==1.16.0
+pytz==2021.1
+pywatchman==1.4.1
+requests==2.26.0
+six==1.15.0
 SQLAlchemy==1.3.23
+sqlparse==0.4.1
+toml==0.10.2
+tqdm==4.62.3
+urllib3==1.26.7
+virtualenv==20.4.4
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 WTForms==2.3.3
