--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pipenv==2020.11.15
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
+python==3.9.7
 python-dateutil==2.8.2
 python-dotenv==0.15.0
 pytz==2021.1
